<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_02"
    tools:context="com.eatfit.activity.Rewards">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/ToolBarStyle_primary">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_5"
                android:text="@string/rewards"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_22" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </android.support.v7.widget.Toolbar>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/updatesLay"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_200"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@mipmap/pop_up_01">

        <LinearLayout
            android:id="@+id/pointsLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_7.5"
            android:orientation="vertical"
            android:paddingRight="@dimen/dp_20"
            android:weightSum="3">

            <TextView
                android:id="@+id/updates"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:includeFontPadding="true"
                android:padding="@dimen/dp_5"
                android:text="@string/myRewards"
                android:textAllCaps="true"
                android:textColor="@color/greenbg"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/updatesMessage"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="start"
                android:includeFontPadding="true"
                android:minLines="2"
                android:padding="@dimen/dp_5"
                android:text="@string/rewardsPoint"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:id="@+id/redeemPoints"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/pointsLay"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_weight="1"
                android:background="@drawable/bg_redeempoints"
                android:gravity="start"
                android:includeFontPadding="true"
                android:paddingBottom="@dimen/dp_7.5"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:paddingTop="@dimen/dp_7.5"
                android:text="@string/redeemPoints"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>
