<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:padding="@dimen/dp_15">

    <RelativeLayout
        android:id="@+id/shareInside"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:singleLine="true"
            android:text="@string/shared"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="@dimen/dp_7.5">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/shareInApp"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:visibility="gone"
                app:elevation="6dp"
                app:pressedTranslationZ="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_toRightOf="@+id/shareInApp"
                android:drawableLeft="@mipmap/share_left"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_5"
                android:singleLine="true"
                android:text="@string/sharewithin"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/shareOutsideApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/shareOutside"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:visibility="gone"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_toRightOf="@+id/shareOutside"
            android:drawableLeft="@mipmap/share_right"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_5"
            android:singleLine="true"
            android:text="@string/shareOutside"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />
    </RelativeLayout>

</LinearLayout>