<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eatfit.activity.MyNutrition">

    <RelativeLayout
        android:id="@+id/upperPanel"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#75000000">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@mipmap/header_bg_02" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/ToolBarStyle_primary">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_5"
                android:text="@string/mynutrition"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_22" />


        </android.support.v7.widget.Toolbar>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonVegeterianLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/upperPanel"
        android:background="@color/black">

        <LinearLayout
            android:id="@+id/buttonVegeterian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_7.5"
            android:background="@mipmap/veg"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/veg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/dp_5"
                android:paddingTop="@dimen/dp_5"
                android:text="@string/veg"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/nonVeg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/dp_5"
                android:paddingTop="@dimen/dp_5"
                android:text="@string/nonveg"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_16" />


        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/dishesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/buttonVegeterian"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/black">

        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

</RelativeLayout>
